--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div >
                 <h1 class = "header_text">I am really Sorry</h1>
-                <h1 class = "header_text">Kya tumne mujhe maaf krr dia hai?git branch -M main👉🏻👈🏻</h1>
+                <h1 class = "header_text">Kya tumne mujhe maaf krr dia hai?👉🏻👈🏻</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration">
